Bug 253186 - When clicking "Edit Constants" in the "Equation Editor" window, the "Equation Editor" window must be closed to edit constants
Summary: When clicking "Edit Constants" in the "Equation Editor" window, the "Equation...
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-04 01:50 UTC by Alessandro Ghersi
Modified: 2010-10-26 05:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro Ghersi 2010-10-04 01:50:50 UTC
Version:           4.2.2
OS:                Linux

Bug reported here:
https://bugs.launchpad.net/ubuntu/+source/kdeedu/+bug/429013

Forgive me if I'm using terminology from the wrong OS, but the "Equation Editor" window appears to be 'modal' and 'always-on-top', while the "Constants Editor" window is not. Thus, when clicking "Edit Constants" in the "Equation Editor" window, the window to edit constants is opened, but is immediately pushed back and not allowed focus by the "Equation Editor" window.

kmplot 4:4.2.2-0ubuntu1, Ubuntu 9.04.

Reproducible: Didn't try
Comment 1 Christoph Feck 2010-10-26 05:29:31 UTC
SVN commit 1189848 by cfeck:

Make constant editor modal in function editor

FIXED-IN: 4.6.0
BUG: 253186


 M  +7 -1      equationeditorwidget.cpp  
 M  +1 -0      equationeditorwidget.h  
 M  +9 -0      maindlg.cpp  
 M  +4 -1      maindlg.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1189848