Make constant editor modal in function editor

FIXED-IN: 4.6.0
BUG: 253186

svn path=/trunk/KDE/kdeedu/kmplot/; revision=1189848